--- a/requirements.txt
+++ b/requirements.txt
@@ -31,7 +31,7 @@ nbconvert==5.6.1
 nbformat==5.0.4
 notebook==6.1.5
 numpy==1.18.1
-pandas==1.0.1
+pandas
 pandocfilters==1.4.2
 parso==0.6.2
 pexpect==4.8.0
