--- a/requirements.txt
+++ b/requirements.txt
@@ -46,11 +46,11 @@ pytz==2019.3
 pyzmq==19.0.0
 qtconsole==4.7.1
 QtPy==1.9.0
-scikit-learn==0.21.2
-scipy==1.4.1
+scikit-learn
+scipy
 Send2Trash==1.5.0
 six==1.14.0
-sklearn==0.0
+sklearn
 sqlparse==0.3.1
 terminado==0.8.3
 testpath==0.4.4
